[package]
name = "dongo"
version = "0.1.0"
edition = "2021"

default-run = "dongo"

[dependencies]
three-d = "0.17.0"
rand = "0.8.4"
noise = "0.9.0"
three-d-asset = {version = "0.7", features = ["hdr", "gltf", "obj", "vol", "pcd", "png", "jpeg", "http", "data-url"] } # i kind of only need obj i think, perhaps ill use some other format later
tri-mesh = "0.6.0"
obj = "0.10.2"
tokio = { version = "1.39.1", features = ["full"] }
tokio-macros = "1.0" # Use a compatible version with tokio 1.x

